--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,124 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: 1rem;
   font-family: 'Karla', sans-serif;
+}
+
+:root {
+  --accent-color: #d1215c;
+  --white: #FFFFFF;
+}
+
+body {
+  background: #FFFFFF;
+}
+
+.App {
+  
+}
+
+/* header {}
+header > img {}
+header > h2 {}
+header > h4 {} */
+
+.header {
+  background: var(--accent-color);
+  color: var(--white);
+  box-shadow: 8px 5.98256px 7.4564px rgba(0, 0, 0, 0.1);
+}
+
+.header > div {
+  padding: 1rem 2rem;
+  max-width: 700px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header > div > .header--left {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.9rem;
+}
+
+.logo-container {
+
+}
+
+.header--image {
+  width: 100%;
+  max-width: 40px;
+  /* display: flex; */
+
+}
+
+.header--title {
+  font-weight: 500;
+  font-size: 1.25rem;
+}
+
+.header--project {
+  font-size: 0.65rem;
+  font-weight: 300;
+}
+
+
+main {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  margin: 1.8rem;
+  gap: 1.5rem;
+}
+
+.form > div {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.form--input {
+  height: 3rem;
+  border-radius: 9px;
+  border: 1px solid #D5D4D8;
+  padding: 1rem;
+}
+
+.form--input:hover {
+  border: 1px solid #979799;
+}
+
+@media (min-width: 42rem) {
+  .form > div {
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .form--input {
+    width: 100%;
+  }
+
+  .header > div {
+    padding-inline: 1.8rem;
+  }
+}
+
+.form--button {
+  height: 3rem;
+  border-radius: 9px;
+  background: var(--accent-color);
+  border: none;
+  color: var(--white);
+  box-shadow: 8px 5.98256px 7.4564px rgba(0, 0, 0, 0.1);
+  font-weight: 600;
+  cursor: pointer;
 }
