--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@ header > h4 {} */
 .header--project {
   font-size: 0.65rem;
   font-weight: 300;
+  color: var(--white);
 }
 
 
@@ -115,11 +116,16 @@ main {
 
 .form--button {
   height: 3rem;
-  border-radius: 9px;
+  border-radius: 5px;
   background: var(--accent-color);
   border: none;
   color: var(--white);
   box-shadow: 8px 5.98256px 7.4564px rgba(0, 0, 0, 0.1);
   font-weight: 600;
   cursor: pointer;
+}
+
+.meme-img {
+  border-radius: 5px;
+  border: 1px solid #D5D4D8;
 }
